# ltb-ddf

./: .clang-tidy  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  format.sh
ci/: download_cmake.sh
cmake/: CCache.cmake  LtbAddExecutable.cmake  LtbAddLibrary.cmake  LtbConfig.cmake  ThirdParty.cmake  ThirdPartyGui.cmake
examples/: CMakeLists.txt
examples/chat_room/: example_client.cpp  example_client.hpp
examples/display_window/: main.cpp
examples/intersection/: main_window.cpp
examples/primitives/: main_window.cpp  main_window.hpp
examples/scene/: example_renderable.hpp  main_window.hpp
examples/shaders/: grid_shader.frag  grid_shader.vert
examples/simple/: main.cpp
examples/tmp_demo/: main.cpp
ltb-gvs/: .clang-format  CMakeLists.txt  Doxyfile
ltb-gvs/cmake/: BoostUuidLibs.cmake  ThirdPartyCore.cmake  ThirdPartyCuda.cmake  ThirdPartyGraphics.cmake  ThirdPartyGui.cmake
ltb-gvs/examples/: CMakeLists.txt  resources.conf
ltb-gvs/examples/chat_room/: example_client.cpp  example_client.hpp  example_server.cpp  example_server.hpp  example_service.cpp  example_service.hpp  main.cpp
ltb-gvs/examples/common/: test_scene.cpp  test_scene.hpp
ltb-gvs/examples/cpp11_client/: main.cpp
ltb-gvs/examples/intersection/: main_window.hpp
ltb-gvs/examples/scene/: example_renderable.cpp  main_window.cpp  main_window.hpp
ltb-gvs/examples/scene_client/: main.cpp
ltb-gvs/examples/shaders/: grid_shader.cpp  grid_shader.hpp
ltb-gvs/ltb-net/: .gitignore  CMakeLists.txt  Doxyfile  README.md  format.sh
ltb-gvs/ltb-net/cmake/: ThirdParty.cmake
ltb-gvs/ltb-net/example/protos/chat/: chat_room.proto  message.proto  user.proto
ltb-gvs/ltb-net/example/protos/util/: util.proto
ltb-gvs/ltb-net/example/src/: example_client.cpp  example_client.hpp  example_server.hpp
ltb-gvs/ltb-net/ltb-util/: .travis.yml  CMakeLists.txt
ltb-gvs/ltb-net/ltb-util/ci/: build_and_run.sh
ltb-gvs/ltb-net/ltb-util/cmake/: ClangTidy.cmake  LtbAddLibrary.cmake  LtbConfig.cmake
ltb-gvs/ltb-net/ltb-util/src/: ltb_paths.hpp.in
ltb-gvs/ltb-net/ltb-util/src/ltb/cuda/: optix_check.hpp
ltb-gvs/ltb-net/ltb-util/src/ltb/util/: atomic_data.cpp  atomic_data.hpp  enum_bits.hpp  error.cpp  error.hpp  file_utils.cpp  generic_guard.cpp  hash_utils.hpp  result.hpp  type_string.cpp
ltb-gvs/ltb-net/src/ltb/net/: tag.cpp  tagger.hpp
ltb-gvs/ltb-net/src/ltb/net/client/: async_client.cpp  async_client.hpp
ltb-gvs/ltb-net/src/ltb/net/server/: async_server_unary_writer.hpp
ltb-gvs/src/: gvs_cuda_includes.hpp.in  gvs_paths.hpp.in
ltb-gvs/src/ltb/cuda/: gl_buffer.cu  gl_buffer.hpp  gl_buffer_image.cu  gl_buffer_image.hpp
ltb-gvs/src/ltb/cuda/optix/: compile_ptx_from_cu_string.cpp  device_memory.cpp  optix.cpp  optix.cu.old  optix.hpp.old  programs_to_compile.hpp
ltb-gvs/src/ltb/grpcw/client/: grpc_client_state.hpp  grpc_client_stream.hpp
ltb-gvs/src/ltb/gvs/: forward_declarations.hpp
ltb-gvs/src/ltb/gvs/core/: custom_renderable.hpp  forward_declarations.hpp  log_params.hpp  nil_scene.hpp  param_setters.hpp  primitive_types.hpp  scene_id.hpp  scene_update_handler.cpp  self_deleting_scene_id.cpp  types.hpp
ltb-gvs/src/ltb/gvs/display/: camera_package.cpp  camera_package.hpp  display_scene.cpp  display_window.cpp  forward_declarations.hpp  local_scene.cpp  local_scene.hpp  magnum_conversions.cpp  magnum_conversions.hpp  make_primitive.hpp  scene_core.cpp  scene_display.hpp  scene_info_helpers.cpp  scene_update_func.hpp
ltb-gvs/src/ltb/gvs/display/backends/: drawables.cpp  drawables.hpp  opengl_backend.cpp  opengl_backend.hpp
ltb-gvs/src/ltb/gvs/display/gui/: docking.cpp  docking.hpp  error_alert.cpp  error_alert.hpp  error_alert_recorder.hpp  imgui_magnum_application.cpp  imgui_theme.hpp  imgui_utils.cpp  imgui_utils.hpp  scene_gui.hpp  settings.cpp  sub_view.cpp  sub_view.hpp
ltb-gvs/src/ltb/gvs/display/shaders/: box_shader.cpp  box_shader.vert  general_shader.hpp  points_shader.frag
ltb-gvs/src/ltb/gvs/util11/: result_11.hpp
ltb-net/: .clang-format
ltb-net/cmake/: CreateProtoLibrary.cmake
ltb-net/example/: CMakeLists.txt
ltb-net/example/src/: example_server.cpp  main.cpp
ltb-net/ltb-util/: .clang-tidy  Doxyfile
ltb-net/ltb-util/ci/: download_cmake.sh
ltb-net/ltb-util/cmake/: CodeCoverage.cmake  LtbAddExecutable.cmake  LtbAddExternal.cmake  LtbSetProperties.cmake  ThirdParty.cmake
ltb-net/ltb-util/src/google/: AlmostEquals.h
ltb-net/ltb-util/src/ltb/cuda/: cuda_check.hpp  cuda_func.hpp
ltb-net/ltb-util/src/ltb/util/: atomic_data.cpp  comparison_utils.hpp  container_utils.hpp  duration.cpp  duration.hpp  enum_bits.hpp  error.cpp  generic_guard.hpp  string.cpp  timer.cpp  timer.hpp  variant_utils.hpp
ltb-net/protos/testing/: testing.proto
ltb-net/src/ltb/net/: tag.hpp  tagger.cpp
ltb-util/: .gitignore  .travis.yml  CMakeLists.txt
ltb-util/cmake/: CodeCoverage.cmake  LtbSetProperties.cmake  ThirdParty.cmake
ltb-util/src/: ltb_config.hpp.in  ltb_paths.hpp.in
ltb-util/src/ltb/util/: comparison_utils.hpp  error.hpp  file_utils.hpp  generic_guard.cpp  result.hpp  string.hpp  timer.cpp  timer.hpp  variant_utils.hpp
src/: resources.conf
src/ddf/core/: ddf.cpp  ddf.hpp
src/ddf/viewer/: graph_sub_view.cpp  graph_sub_view.hpp  main.cpp  main_window.cpp  main_window.hpp
src/google/: AlmostEquals.h
src/ltb/cuda/: buffer_map_guard.hpp  cuda_check.hpp
src/ltb/cuda/optix/: compile_ptx_from_cu_string.hpp  device_memory.h  optix.hpp
src/ltb/grpcw/: forward_declarations.hpp
src/ltb/grpcw/client/: grpc_client.cpp  grpc_client.hpp
src/ltb/gvs/core/: nil_scene.cpp  param_checkers.hpp  param_getters.hpp  param_setters.hpp  scene.cpp  scene.hpp  scene_id.cpp  scene_update_handler.cpp  scene_update_handler.hpp  self_deleting_scene_id.hpp
src/ltb/gvs/display/: display_scene.hpp  display_window.hpp  make_primitive.cpp  scene_core.hpp  scene_info_helpers.hpp
src/ltb/gvs/util11/: make_unique_11.hpp
src/ltb/testing/gvs/: scoped_gl_context.cpp  scoped_gl_context.hpp
src/ltb/util/: atomic_data.cpp  blocking_queue.hpp  type_string.hpp
(+30 files in other folders)
